# my-project

drf_cbv_v1.1/: README.md  pyproject.toml
drf_cbv_v1.1/drf_cbv/: db.sqlite3  manage.py
drf_cbv_v1.1/drf_cbv/drf_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
drf_cbv_v1.1/drf_cbv/solitaire/: apps.py  models.py  serializers.py  urls.py  views.py
drf_cbv_v1.1/drf_cbv/solitaire/migrations/: 0001_initial.py  0002_alter_deckcard_unique_together_alter_card_rank_and_more.py
